Fix overflow

--- a/css/main.scss
+++ b/css/main.scss
@@ -11,7 +11,7 @@
 body {
   scroll-behavior: smooth;
   font-style: normal;
-  overflow-x: hidden;
+  // overflow-x: hidden;
   text-align: center;
   background: black url(../images/bg/stage.jpg) no-repeat fixed;
   background-size: auto 100%;
@@ -33,21 +33,19 @@ body {
 
 section {
   position: relative;
-  // width: 100vw;
+  max-width: 100vw;
   min-height: 100vh;
 }
 
 .splash-page {
   z-index: 100;
   height: 100vh;
-  width: 100vw;
+  max-width: 100vw;
   margin-bottom: 100vh;
 
   .splash-space {
     margin: 0;
     height: 90vh;
-    width: 100vw;
-    // background-color: black;
   }
 
   .bg-dark {
@@ -64,7 +62,7 @@ section {
     position: fixed;
     top: 0;
     height: 100vh;
-    width: 50%;
+    max-width: 50%;
     #{$position}: 0;
   }
 
